fixed navbar spacing issue and added bucket icon

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -76,7 +76,9 @@
       
       .navbar {
 	border-bottom: 2px solid #ccc;
-	padding: 10px;
+	padding: 20px;
+	font-size: 24px;
+	
       }
 
       header h1 {
